# coehoorn

./: .gitignore  ARCHITECTURE.md  BUILD_STATE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MISTAKES.md  OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  external-siege.yml  pages.yml  release.yml  siege.yml  trace-gate.yml
apps/stub-agent/: app.py  pyproject.toml  test_app.py
coehoorn/: __init__.py  agent_adapter.py  aggregator.py  cascade.py  cli.py  config.py  conversation.py  distill.py  inspect_export.py  judge.py  mcp_redteam.py  mcp_server.py  meta_eval.py  metamorphic.py  metrics.py  mutants.py  outputs.py  overfit.py  personas.py  personas_kb.py  report_html.py  rubric_parser.py  schemas.py  selective_risk.py  trace_export.py
coehoorn/data/: rubric_mcp.yaml
coehoorn/selfplay/: __init__.py  cli.py  conjecturer.py  guide.py  loop.py
docs/: ENGAGEMENT_TEMPLATE.md  EVAL.md  RIGOR.md  brief.md  coverage-map.md  demo.tape
docs/adr/: README.md
docs/engagements/: DISCOVERY_QUESTIONNAIRE.md  METHODOLOGY.md  ROI_MODEL.md  SOW_TEMPLATE.md
examples/: README.md  expected_failures.yaml  plimsoll_policy_tools.json  rubric_coach.yaml  rubric_tools.yaml
runs/: .keep
runs/sample/: comparison.json  report.html  report.json
runs/sample-mcp/cross-server-shadowing/: report.html  report.json
runs/sample-mcp/rug-pull/: report.html  report.json
runs/sample-mcp/tool-description-poisoning/: report.html  report.json
runs/sample-tools/: report.html  report.json
runs/sample-tools/traces/: t-p00.json  t-p01.json  t-p02.json  t-p03.json  t-p04.json  t-p05.json
scripts/: build_mcp_sample.py  build_sample_report.py  build_sample_report_llm.py  build_tool_sample.py  export_plimsoll_traces.py
tests/: test_agent_adapter.py  test_aggregator.py  test_cli.py  test_config.py  test_conversation.py  test_conversation_llm_alternation.py  test_distill.py  test_end_to_end.py  test_extras.py  test_invariant_demo.py  test_judge.py  test_judge_mutants.py  test_kb_poisoner.py  test_kb_poisoner_run.py  test_mcp_redteam.py  test_mcp_sample_determinism.py  test_meta_eval.py  test_metamorphic.py  test_metrics.py  test_outputs.py  test_overfit.py  test_personas.py  test_release_workflow.py  test_report_html.py  test_rubric_parser.py  test_sample_determinism.py  test_schemas.py  test_selective_risk.py  test_selfplay_cli.py  test_selfplay_conjecturer.py  test_selfplay_guide.py  test_selfplay_loop.py  test_taxonomy.py  test_tool_policy.py  test_trace_export.py
tests/gold/: judge_gold.jsonl
