[project]
name = "coehoorn"
version = "0.2.0"
description = "Local adversarial simulation harness for chat and tool-using agents: rubric in, ranked failure report with cited transcript evidence out."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Coehoorn contributors" }]
keywords = ["red-team", "adversarial", "llm", "agents", "evaluation", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.97.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/theo-ai-lab/coehoorn"
Repository = "https://github.com/theo-ai-lab/coehoorn"
Issues = "https://github.com/theo-ai-lab/coehoorn/issues"

[project.optional-dependencies]
# Lazy extras: neither is imported on the core path. See ADRs.
mcp = ["mcp>=1.0"]
inspect = ["inspect-ai>=0.3"]

[project.scripts]
coehoorn = "coehoorn.cli:main"
coehoorn-mcp = "coehoorn.mcp_server:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coehoorn"]

[dependency-groups]
dev = [
    "flask>=3.1.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Explicit ruleset (adopted 2026-07: every violation the set surfaced was fixed
# in the enabling change, none grandfathered behind blanket ignores):
#   E/W  pycodestyle errors + warnings     F   pyflakes (the core)
#   I    import ordering                   B   bugbear likely-bug patterns
#   UP   pyupgrade (3.11+ idioms)          C4  comprehension hygiene
#   SIM  needless-complexity patterns      RUF ruff-native checks
# Deliberately NOT enabled (decided, not forgotten):
#   N   naming — mutant/regression tests use uppercase ids (test_M1_...) on
#       purpose so test names match the mutant catalog in coehoorn/mutants.py.
#   PT  pytest style — PT018 would split 31 composite asserts and PT011 add
#       match= to 17 raises blocks: test churn with no behavior gain here.
#   ARG unused arguments — agent adapters, stub servers, and test doubles
#       implement fixed call signatures; unused parameters are the contract.
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
# The en dash is deliberate range typography in the report surface and docs
# ("95% CI 0.68–0.74"), not a look-alike typo; RUF001/RUF002 may not flag it.
allowed-confusables = ["–"]
